# Hack4freedom

./: .gitignore  AGENTS.md  README.md  agente.md  contexto.md  docusaurus.config.js  financeiro.md  ideia.md  package-lock.json  package.json  sidebars.js  tecnologias.md
.codex/: AGENTS.md  PLAN.md
.github/PULL_REQUEST_TEMPLATE/: lares.md
.github/workflows/: deploy-docs.yml  lares.yml  quality.yml
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt  wsgi.py
apps/api/bluejet_api/: __init__.py  app.py  auth.py  community.py  config.py  database.py  finance.py  learning.py  observability.py  outbox.py  seed_roles.py  work.py  workers.py
apps/api/tests/: nostr_test_utils.py  test_auth.py  test_finance.py  test_health.py  test_http_security.py  test_learning.py  test_observability.py  test_openapi_contract.py  test_persistence_postgres.py  test_work.py
apps/web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: README.md  docusaurus.config.js  financeiro.md  fluxo-de-execucao.md  fluxo-paginas.md  fluxos.md  frontend-figma-review.md  lightning.md  package.json  phase-9-routes-and-backend.md  requisitos.md  sidebars.js  validacao.md
docs/adr/: ADR-001-reservas-de-tarefa-e-atribuicao.md  ADR-002-idempotencia-e-reconciliacao-lightning.md  ADR-003-inspecao-figma-frontend.md  ADR-004-obligation-lifecycle.md
docs/controle/: README.md  risk-policy.json  risk-register.json  (+3 more)
ideia/: financeiro.md  fluxos.md  ideia.md  requisitos.md
migrations/: README.md  env.py
openapi/: openapi.yaml
(+348 files in other folders)
