[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bluejet-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["Flask>=3.1,<4", "SQLAlchemy>=2.0,<3", "alembic>=1.14,<2", "psycopg[binary]>=3.2,<4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
